--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>魇</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="index.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <div>
         <div class="title" style="text-align: center;padding-top: 32px;">魇系列快捷下载</div>
         <div
-            style="padding: 20px 30px 20px 30px;display: flex;flex-direction: row;flex-wrap: wrap;justify-content: flex-start;">
+            style="padding: 20px 10px 20px 10px;display: flex;flex-direction: row;flex-wrap: wrap;justify-content: flex-start;">
             <div class="card">
                 <div class="row">
                     <img src="img/YanTool.png" style="width:32px;height: 32px;margin-right: 10px;" alt="">
