--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         style="display: flex; align-items: center;justify-content: center;">
                         <div style="height:20px;line-height:20px;">开源</div>
                     </div>
-                    <div onclick="onClick('http://nightmare.fun/YanTool/resources/ADBTool/')" class="button"
+                    <div onclick="onClick('http://nightmare.fun/YanTool/resources/ADBTool?C=N;O=A')" class="button"
                         style="display: flex; align-items: center;justify-content: center;">
                         <div style="height:20px;line-height:20px;">下载</div>
                     </div>
@@ -87,7 +87,7 @@
                         style="display: flex; align-items: center;justify-content: center;">
                         <div style="height:20px;line-height:20px;">开源</div>
                     </div>
-                    <button onclick="onClick('http://nightmare.fun/YanTool/resources/SpeedShare/')" class="button"
+                    <button onclick="onClick('http://nightmare.fun/YanTool/resources/SpeedShare?C=N;O=A')" class="button"
                         style="display: flex; align-items: center;justify-content: center;">
                         <div style="height:20px;line-height:20px;">下载</div>
                     </button>
@@ -110,7 +110,7 @@
                         <div style="height:20px;line-height:20px;">开源</div>
                     </div>
 
-                    <button onclick="onClick('http://nightmare.fun/YanTool/resources/AppManager/')" class="button"
+                    <button onclick="onClick('http://nightmare.fun/YanTool/resources/AppManager?C=N;O=A')" class="button"
                         style="display: flex; align-items: center;justify-content: center;">
                         <div style="height:20px;line-height:20px;">下载</div>
                     </button>
